# cxg-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  biome.json  docker-compose.dev.yml  docker-compose.prod.yml  package-lock.json  package.json  pnpm-lock.yaml
.claude/: context.md  conventions.md  (+5 more)
apps/api-server/: .pre-commit-config.yaml  Dockerfile  README_SEED.md  format.sh  main.py  pyproject.toml  requirements.txt  run_dev.sh  seed_idam.py
apps/api-server/migrations/: migration_timezone_fix.sql
apps/api-server/src/: main.py
apps/api-server/src/api/mgmt/: v1.py
apps/api-server/src/api/tnnt/: v1.py
apps/api-server/src/api/v1/: router.py
apps/api-server/src/api/v1/endpoints/: auth.py  tenants.py  users.py
apps/api-server/src/core/: auth_deps.py  config.py  database.py  db.py  security.py
apps/api-server/src/graphql/: schema.py
apps/api-server/src/models/: base.py  tenant.py  user.py
apps/api-server/src/models/mgmt/: __init__.py
apps/api-server/src/models/mgmt/audt/: __init__.py  audit_log.py  compliance.py  policy.py
apps/api-server/src/models/mgmt/auto/: __init__.py  execution.py  task.py  workflow.py
apps/api-server/src/models/mgmt/bill/: __init__.py  invoice.py  plan.py  transaction.py
apps/api-server/src/models/mgmt/bkup/: __init__.py  execution.py  recovery_plan.py  schedule.py
apps/api-server/src/models/mgmt/cnfg/: __init__.py  configuration.py  feature_flag.py  service_quota.py  tenant_feature.py
apps/api-server/src/models/mgmt/idam/: __init__.py
apps/api-server/src/models/mgmt/ifra/: __init__.py  resource.py  resource_usage.py
apps/api-server/src/models/mgmt/intg/: __init__.py  api.py  rate_limit.py  webhook.py
apps/api-server/src/models/mgmt/mntr/: __init__.py  health_check.py  incident.py  system_metric.py
apps/api-server/src/models/mgmt/noti/: __init__.py  campaign.py  notification.py  template.py
apps/api-server/src/models/mgmt/stat/: __init__.py  tenant_stat.py  usage_stat.py
apps/api-server/src/models/mgmt/supt/: __init__.py  feedback.py  ticket.py  ticket_comment.py
apps/api-server/src/models/mgmt/tnnt/: __init__.py  onboarding.py  subscription.py  tenant_role.py  tenant_user.py
apps/api-server/src/modules/mgmt/audt/: __init__.py  model.py
apps/api-server/src/modules/mgmt/auth/: router.py
apps/api-server/src/modules/mgmt/auto/: __init__.py  model.py
apps/api-server/src/modules/mgmt/bill/: __init__.py  model.py
apps/api-server/src/modules/mgmt/bkup/: __init__.py  model.py
apps/api-server/src/modules/mgmt/cnfg/: __init__.py  model.py
apps/api-server/src/modules/mgmt/idam/: __init__.py  model.py  router.py  seed_data.py
apps/api-server/src/modules/mgmt/ifra/: __init__.py  model.py
apps/api-server/src/schemas/: __init__.py  tenant.py  user.py
apps/api-server/src/schemas/common/: response.py
apps/api-server/src/services/mgmt/: login_log_service.py  session_service.py
apps/api-server/src/trpc/: router.py
(+222 files in other folders)
